syntax = "proto3";
package interop;

import "interop/obstacles.proto";
import "interop/mission.proto";

message MissionName {
    string mission_name = 1;
}

message MissionNameList {
    repeated string mission_name_list = 1;
}

message Target {
    string type = 1;
    float latitude = 2;
    float longitude = 3;
    string shape = 4;
    string alphanumeric = 5;
    string alpanumeric_color = 6;
    string background_color = 7;
    string description = 8;
    string orientation = 9;
}

message SitlConfig {
    int32 takeoff_direction = 1;
}

message CompleteMission {
    string mission_name = 1;
    Mission mission = 2;
    ObstaclesEdit obstacles = 3;
    SitlConfig sitlconfig = 4;
    repeated Target targets = 5;
}
